# ddcrp-graph

./: .gitignore  CMakeLists.txt  README.md  clustering.py  ddcrp.py  draw.py  dynamic_real.py  ensemble.py  main.cpp  main.py  mod_real.py  mod_synthetic.py  requirements.txt  static_synthesis.py  tc.py  test.py  util.py
cpp/: clustering.py  clustering_c.cpp  clustering_c.h  ddcrp_c.h  main.cpp  main.py
cpp/clustering/: clustering.py  clustering_c.cpp
cpp/clustering/ddcrp/: ddcrp.h
cpp/ddcrp/: collection.h  common.h  ddcrp.h  math.h  prior.h
dataset/: __init__.py  email-nodes.csv  generator.py  graph.py  loader.py  reddit-nodes.csv
ddcrp/: ddcrp.py  prior.py
ddcrp_gibbs/: ddcrp.py  prior.py
graph/: sbm.py
log/modularity/synthetic/: log.csv
log/real/: combine.py  hop_1_window_10_scale_1000.csv  hop_1_window_10_scale_2000.csv  hop_1_window_10_scale_3000.csv  hop_1_window_10_scale_4000.csv  hop_1_window_10_scale_5000.csv  hop_1_window_10_scale_6000.csv  hop_1_window_10_scale_7000.csv  hop_1_window_10_scale_8000.csv  hop_2_window_10_scale_1000.csv  hop_2_window_10_scale_2000.csv  hop_2_window_10_scale_3000.csv  hop_2_window_10_scale_4000.csv  hop_2_window_10_scale_5000.csv  hop_2_window_10_scale_6000.csv  hop_2_window_10_scale_7000.csv  hop_2_window_10_scale_8000.csv  log.py
log/synthesis/: log.csv  log.py
python/: clustering.py  main.py
python/ddcrp/: ddcrp.py
src/: draw.py  logger.py  util.py
src/ddcrp/: clustering.py  clustering_c.cpp  clustering_c.h
src/ddcrp/core/: assignment.h  common.cpp  common.h  ddcrp.h  ds.h  math.cpp  math.h  niw.cpp  niw.h  prior.h
src/ddcrp/interface/: DDCRP.py  clustering.py  clustering_c.cpp  clustering_c.h
src/deepwalk/: deepwalk.py  walk.py  word2vec.py
src/graph/: data.py  sbm.py
src/kmeans/: kmeans.py
src/mcla/: mcla.py  util.py
src/model/: model.py
tex/: main.tex
tex/report/: abstract.tex  acknowledgement.tex  appendix.tex  conclusion.tex  cover.tex  experiment.tex  introduction.tex  references.bib
tex/report/literature/: come.tex  literature.tex  matrixfactorization.tex  neuralnetwork.tex  relation.tex  skipgram.tex  spectral.tex
tex/report/method/: implementation.tex  method.tex
tex/report/method/preliminaries/: ddcrp.tex  deepwalk.tex  preliminaries.tex
